# redisconfig

./: .editorconfig  .gitignore  CONTRIBUTORS  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml
redisconfig/: __init__.py  config.py
tests/: test_config.py
