[tool.poetry]
name = "redisconfig"
version = "0.1.0"
description = "Simple, robust Redis configuration for Python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
redis = ">=3,<5"
pytest = { version = "^6.2.5", optional = true }
black = { version = "^21.9b0", optional = true }
isort = {version = "^5.9.3", optional = true}
flake8 = {version = "^4.0.1", optional = true}
flake8-bugbear = {version = "^21.9.2", optional = true}

[tool.poetry.extras]
test = ["pytest", "black", "isort", "flake8", "flake8-bugbear"]
dev = ["pytest", "black", "isort", "flake8", "flake8-bugbear"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -ra"
testpaths = "tests"

[tool.isort]
profile = "black"
