[tool.poetry]
name = "redisconfig"
version = "0.1.0"
description = "Simple, robust Redis configuration for Python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
redis = ">=3,<5"
pytest = { version = "^6.2.5", optional = true }
black = { version = "^21.9b0", optional = true }
isort = { version = "^5.10.1", optional = true }
mypy = {version = "^0.920", optional = true}
dataclasses = {version = "^0.8", python = "3.6"}

[tool.poetry.extras]
test = ["pytest", "black", "isort", "mypy"]
dev = ["pytest", "black", "isort", "mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -ra"
testpaths = "tests"

[tool.tox]
legacy_tox_ini = """
[env]
FORMAT_PATHS = redisconfig tests

[tox]
envlist =
    py{310,39,38,37,36}-redis{3,4}
    mypy
    formatting
    lint
skip_missing_interpreters = true
isolated_build = true

[testenv]
extras =
    test
deps =
    redis3: redis>=3,<4
    redis4: redis>=4.0.0b1,<5
commands =
    pytest

[testenv:mypy]
commands =
    mypy --install-types --non-interactive

[testenv:formatting]
commands =
    black --check {[env]FORMAT_PATHS}
    isort --check {[env]FORMAT_PATHS}

[testenv:lint]
commands =
    flake8
"""
