[tool.poetry]
name = "redisconfig"
version = "0.1.0"
description = "Simple, robust Redis configuration for Python"
authors = ["Jeremy Carbaugh <jeremy.carbaugh@xplortechnologies.com>", "Jason Williams <jason.williams@xplortechnologies.com>"]
keywords = ["redis"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/xplor/redisconfig"
repository = "https://github.com/xplor/redisconfig"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.6.2"
redis = ">=3,<5"
pytest = { version = "^6.2.5", optional = true }
black = { version = "==22.3.0", optional = true }
mypy = {version = "^0.920", optional = true}
flake8 = {version = "^4.0.1", optional = true}
dataclasses = {version = "^0.8", python = "3.6"}

[tool.poetry.extras]
test = ["pytest", "black", "mypy", "flake8"]
dev = ["pytest", "black", "mypy", "flake8"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -ra"
testpaths = "tests"

[tool.mypy]
files = "redisconfig"
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[env]
FORMAT_PATHS = redisconfig tests

[tox]
envlist =
    py{310,39,38,37,36}-redis{3,4}
    mypy
    formatting
    lint
skip_missing_interpreters = true
isolated_build = true

[testenv]
extras =
    test
deps =
    redis3: redis>=3,<4
    redis4: redis>=4.0.0b1,<5
commands =
    pytest

[testenv:mypy]
commands =
    mypy --install-types --non-interactive

[testenv:formatting]
commands =
    black --check {[env]FORMAT_PATHS}

[testenv:lint]
commands =
    flake8 --ignore=E501
"""
